--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.17
+  animations: ^2.0.11
 
 dev_dependencies:
   flutter_test:
