--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_painter: ^0.7.1
   open_file: ^3.3.2
   path_provider: ^2.1.2
   cupertino_icons: ^1.0.8
@@ -17,6 +16,10 @@ dependencies:
   flutter_svg: ^2.0.17
   animations: ^2.0.11
   image_picker: ^1.1.2
+  image: ^4.0.17
+  image_painter:
+    git:
+      url: https://github.com/kodebase-erlangga/Image-Painter-erlangga.git
 
 dev_dependencies:
   flutter_test:
